added minor updates